refactor: separate the alloc function of softirq and timer
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/kernel/irq/Makefile
+++ b/kernel/irq/Makefile
@@ -1,4 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += irq.o handle.o softirq.o
-obj-y += hardirq.o bottom-half.o
+obj-y += bottom-half.o
+obj-y += handle.o
+obj-y += hardirq.o
+obj-y += irq.o
 obj-y += preempt.o
+obj-y += softirq.o
+obj-y += softirq-alloc.o
