--- a/kernel/time/Makefile
+++ b/kernel/time/Makefile
@@ -1,3 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += systicks.o timekeeping.o kclock.o
-obj-y += timer.o delay.o
+obj-y += delay.o
+obj-y += kclock.o
+obj-y += systicks.o
+obj-y += timekeeping.o
+obj-y += timer.o
+obj-y += timer-alloc.o
