feat rational: added calculate best rational approximation function
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/math/Makefile
+++ b/usr/selftest/math/Makefile
@@ -1,2 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_SELFTEST_MATH_BEZIER3) += bezier3.o
+obj-$(CONFIG_SELFTEST_MATH_RATIONAL) += rational.o
