--- a/usr/selftest/math/Kconfig
+++ b/usr/selftest/math/Kconfig
@@ -8,4 +8,8 @@ config SELFTEST_MATH_BEZIER3
     bool "Bezier3"
     default y
 
+config SELFTEST_MATH_RATIONAL
+    bool "Rational"
+    default y
+
 endif # SELFTEST_MATH
