--- a/usr/selftest/Kconfig
+++ b/usr/selftest/Kconfig
@@ -5,6 +5,8 @@ menuconfig KSH_SELFTEST
     default y
 if KSH_SELFTEST
 
+source "usr/selftest/control/Kconfig"
+
 source "usr/selftest/benchmark/Kconfig"
 
 source "usr/selftest/driver/Kconfig"
@@ -21,4 +23,4 @@ source "usr/selftest/math/Kconfig"
 
 source "usr/selftest/memory/Kconfig"
 
-endif
+endif # KSH_SELFTEST
