--- a/usr/selftest/Makefile
+++ b/usr/selftest/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 include-direct-y += $(src)/
 obj-y += selftest.o
+obj-$(CONFIG_SELFTEST_CONTROL) += control/
 obj-$(CONFIG_SELFTEST_BENCHMARK) += benchmark/
 obj-$(CONFIG_SELFTEST_DRIVER) += driver/
 obj-$(CONFIG_SELFTEST_FILTER) += filter/
