--- a/usr/selftest/control/Makefile
+++ b/usr/selftest/control/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-$(CONFIG_SELFTEST_FILTER_PIDC) += pidc.o
+obj-$(CONFIG_SELFTEST_FILTER_PIDI) += pidi.o
+obj-$(CONFIG_SELFTEST_FILTER_PIDR) += pidr.o
 obj-$(CONFIG_SELFTEST_FILTER_WINEXT) += winext.o
