feat polynomial: added funtion using integer arithmetic
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/math/Makefile
+++ b/lib/math/Makefile
@@ -4,6 +4,7 @@ obj-y += bezier.o
 obj-y += cos.o
 obj-y += gcd.o
 obj-y += lcm.o
+obj-y += polynomial.o
 obj-y += map.o
 obj-y += pow.o
 obj-y += prime.o
