--- a/kernel/irq/Makefile
+++ b/kernel/irq/Makefile
@@ -3,6 +3,7 @@ obj-y += bottom-half.o
 obj-y += handle.o
 obj-y += hardirq.o
 obj-y += irq.o
+obj-y += irqpoll.o
 obj-y += preempt.o
 obj-y += softirq.o
 obj-y += softirq-alloc.o
