--- a/init/Makefile
+++ b/init/Makefile
@@ -1,3 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += start.o initcall.o
-obj-y += inittask.o mount.o
+obj-y += initcall.o
+obj-y += inittask.o
+obj-y += kernel.o
+obj-y += mount.o
+obj-y += start.o
